--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background-color: #111111;
+    background-color: #160c36;
     color: #fff;
     height: 100%;
     text-align: justify;
